try to fix on mobile

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -15,6 +15,12 @@ body {
   margin: 50px auto;
 }
 
+@media only screen and (min-width: 768px) {
+  .page {
+    width: 100%;
+  }
+}
+
 footer {
   text-align: center;
   margin-top: 24px;
